# Computing_systems

./: .gitignore
LR_1/: CMakeLists.txt  README.md  start.py
LR_1/include/: IntelTBB.h  OpenMP.h  POSIXthread.h  Random.h  Single.h
LR_1/src/: IntelTBB.cpp  OpenMP.cpp  POSIXthread.cpp  Random.cpp  Single.cpp  main.cpp  matrix.cpp
LR_2/: CMakeLists.txt  README.md  run_test.sh  slurm_1_1.sh  slurm_1_2.sh  slurm_2_1.sh  slurm_2_2.sh
LR_2/include/: MPI_calculations.h  matrix.h
LR_2/src/: MPI_calculations.cpp  Random.cpp  main.cpp  matrix.cpp
